board renders on index and basic styling and game icons

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,22 @@
-dfjeoifj
+<div class='container'>
+
+  <h1>Cat tac toe</h1>
+  <table>
+    <tr class='row1'>
+      <td cell='1'></td>
+      <td cell='2'></td>
+      <td cell='3' class='end'></td>
+    </tr>
+    <tr class='row2'>
+      <td cell='4'></td>
+      <td cell='5'></td>
+      <td cell='6' class='end'></td>
+    </tr>
+    <tr class='row3 lastrow'>
+      <td cell='7'></td>
+      <td cell='8' class='bottom'></td>
+      <td cell='9' class='end'></td>
+    </tr>
+  </table>
+
+</div>
