edited board + text align

--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -19,6 +19,7 @@ td {
   height: 180px;
   border-bottom: 10px solid black;
   border-right: 10px solid black;
+  text-align: center;
 }
 
 td:hover {
