--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,19 +3,19 @@
   <h1>Cat tac toe</h1>
   <table>
     <tr class='row1'>
-      <td cell='1'></td>
-      <td cell='2'></td>
-      <td cell='3' class='end'></td>
+      <td cell='1'>1</td>
+      <td cell='2'>2</td>
+      <td cell='3' class='end'>3</td>
     </tr>
     <tr class='row2'>
-      <td cell='4'></td>
-      <td cell='5'></td>
-      <td cell='6' class='end'></td>
+      <td cell='4'>4</td>
+      <td cell='5'>5</td>
+      <td cell='6' class='end'>6</td>
     </tr>
     <tr class='row3 lastrow'>
-      <td cell='7'></td>
-      <td cell='8' class='bottom'></td>
-      <td cell='9' class='end'></td>
+      <td cell='7'>7</td>
+      <td cell='8' class='bottom'>8</td>
+      <td cell='9' class='end'>9</td>
     </tr>
   </table>
 
