added github link to page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,4 +19,7 @@
     </tr>
   </table>
 
+  <div class='source'>code source <a href="http://github.com/jhw1202/tic-tac-toe">here</a></div>
 </div>
+
+
