--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -7,6 +7,13 @@ h1 {
   text-align: center;
 }
 
+.source {
+  right: 0;
+  font-size: 1.2em;
+  position: absolute;
+  bottom: 0;
+  margin-right: 30px;
+}
 /* tictactoe board stuff */
 
 table {
@@ -16,7 +23,7 @@ table {
 
 td {
   width: 180px;
-  height: 180px;
+  height: 18px;
   border-bottom: 10px solid black;
   border-right: 10px solid black;
   text-align: center;
