prepared for jasmine tests. rudimentary rspec

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
 
   <h1>Cat tac toe</h1>
-  <table>
+  <table class='board'>
     <tr class='row1'>
       <td cell='1'>1</td>
       <td cell='2'>2</td>
