minor fixes. a link back to root path to play again and alert message makes it clear if the game tied or human lost.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,7 +18,7 @@
       <td cell='9' class='end'>9</td>
     </tr>
   </table>
-
+  <div class='replay'><%= link_to "Play Again?", root_path %></div>
   <div class='source'>code source <a href="http://github.com/jhw1202/tic-tac-toe">here</a></div>
 </div>
 
